sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:6: error: not found: value abouger
  while (abouger == true){
         ^